# igh-data-transform

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SESSION.md  pyproject.toml  run-etl.sh  sync-and-run-etl.sh
.github/workflows/: qa.yml
docs/: adding-transformations.md
src/igh_data_transform/: __init__.py  backfill_temporal_scd2.py  cli.py
src/igh_data_transform/etl/: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements-dev.txt
src/igh_data_transform/scripts/: Transformation_ClinicalTrials.ipynb  Transformation_candidates.ipynb  Transformation_diseases.ipynb  Transformation_priorities.ipynb
src/igh_data_transform/temporal_backfill/: __init__.py  backfill_engine.py  scd2_generator.py  schema_transformer.py  temporal_analyzer.py  temporal_columns_report.json
src/igh_data_transform/transformations/: __init__.py  _candidates_config.py  bronze_to_silver.py  candidates.py  cleanup.py  clinical_trials.py  developers.py  diseases.py  priorities.py  silver_to_gold.py
src/igh_data_transform/utils/: __init__.py  country_aliases.py  database.py  validators.py
tests/: __init__.py  conftest.py  test_cli.py
tests/e2e/: conftest.py  test_bronze_to_silver_e2e.py  test_silver_to_gold_e2e.py
tests/temporal_backfill/e2e/: conftest.py  test_backfill_engine.py
tests/unit/: __init__.py  test_bronze_to_silver.py  test_candidates.py  test_cleanup.py  test_clinical_trials.py  test_database.py  test_developers.py  test_diseases.py  test_priorities.py  test_silver_to_gold.py  test_validators.py
tests/unit/silver_to_gold/: test_bridges.py  test_country_iso_codes.py  test_ddl_generator.py  test_dimensions.py  test_expressions.py  test_extractor.py  test_fk_resolution.py  test_loader.py  test_metadata.py  test_schema_map.py  test_transformations.py  test_transformer_dim_disease.py  test_transformer_dim_phase.py  test_year_expansion.py
(+33 files in other folders)
