[project]
name = "igh-data-transform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = ["pandas>=2.0.0"]

[project.scripts]
igh-transform = "igh_data_transform.cli:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "igh-data-sync",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.14",
]

[tool.uv.sources]
igh-data-sync = { git = "ssh://git@github.com/akvo/igh-data-sync.git" }

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests using a real Bronze database (may require Dataverse credentials)",
]
